--- a/app/src/main/res/layout/location_selection_bottom_sheet.xml
+++ b/app/src/main/res/layout/location_selection_bottom_sheet.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/amarante"
         android:paddingBottom="5dp"
-        android:text="Select places that you want to visit"
+        android:text="Loading tourism places..."
         android:textAlignment="center"
         android:textColor="@color/quantum_grey700"
         android:textSize="16sp" />
