--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -64,7 +64,7 @@
                         android:layout_gravity="bottom|center_horizontal"
                         android:src="@drawable/upload_user_photo"
                         android:transitionName="imageTransition"
-                        app:civ_border_color="@color/colorBlue"
+                        app:civ_border_color="@color/color1"
                         app:civ_border_width="5dp" />
 
                     <ImageView
