--- a/app/src/main/res/layout/navigation_drawer_header.xml
+++ b/app/src/main/res/layout/navigation_drawer_header.xml
@@ -6,16 +6,10 @@
     android:background="@android:color/background_dark"
     android:orientation="horizontal">
 
-    <com.skyfishjy.library.RippleBackground
+    <LinearLayout
         android:id="@+id/content"
         android:layout_width="120dp"
-        android:layout_height="match_parent"
-        app:rb_color="#FFFFFF"
-        app:rb_duration="3000"
-        app:rb_radius="32dp"
-        app:rb_rippleAmount="1"
-        app:rb_scale="10"
-        app:rb_type="fillRipple">
+        android:layout_height="match_parent">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/navImageView"
@@ -24,10 +18,10 @@
             android:layout_gravity="center"
             android:padding="15dp"
             android:src="@drawable/upload_user_photo"
-            app:civ_border_color="@color/colorPrimary"
+            app:civ_border_color="@color/color1"
             app:civ_border_width="4dp"
             android:transitionName="imageTransition"/>
-    </com.skyfishjy.library.RippleBackground>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
