event update commit

--- a/app/src/main/res/layout/join_member_layout_design.xml
+++ b/app/src/main/res/layout/join_member_layout_design.xml
@@ -9,11 +9,14 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:backgroundTint="@android:color/white"
-        android:layout_marginBottom="10dp">
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp">
 
             <TextView
                 android:id="@+id/member_nameET"
@@ -31,13 +34,15 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/member_nameET"
                 android:paddingStart="5dp"
+                android:layout_marginBottom="5dp"
                 android:text="01776482727"
                 android:textColor="@android:color/black" />
 
             <ImageView
                 android:id="@+id/member_image"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_centerVertical="true"
                 android:contentDescription="@null"
                 android:layout_alignParentEnd="true" />
         </RelativeLayout>
