--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -165,6 +165,17 @@
                 android:layout_toEndOf="@+id/txt3"
                 android:textColor="@android:color/black"
                 android:textSize="15sp" />
+
+            <ImageView
+                android:id="@+id/edit_meetingPlace"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/ic_edit_blue_24dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:visibility="invisible" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -192,25 +203,51 @@
                 android:layout_toEndOf="@+id/txt8"
                 android:textColor="@android:color/black"
                 android:textSize="15sp" />
+
+            <ImageView
+                android:id="@+id/edit_groupName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/ic_edit_blue_24dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:visibility="invisible" />
         </RelativeLayout>
 
-
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/relative8"
+            android:layout_marginTop="15dp"
+            android:id="@+id/relative10">
         <TextView
             android:id="@+id/txt4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/relative8"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_centerVertical="true"
             android:text="@string/description"
             android:textColor="@android:color/black"
             android:textSize="18sp" />
+
+            <ImageView
+                android:id="@+id/edit_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:src="@drawable/ic_edit_blue_24dp"
+                android:layout_alignParentBottom="true"
+                android:layout_toEndOf="@+id/txt4"
+                android:visibility="invisible" />
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/event_descriptionTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/txt4"
+            android:layout_below="@+id/relative10"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="20dp"
@@ -283,7 +320,7 @@
                 android:textSize="12sp" />
 
             <ImageView
-                android:id="@+id/event_publish_imageTV"
+                android:id="@+id/event_publish_imageIV"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:layout_alignParentEnd="true"
