--- a/app/src/main/res/layout/activity_join_member_details.xml
+++ b/app/src/main/res/layout/activity_join_member_details.xml
@@ -30,7 +30,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/member_details_recycler_view"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
