--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -25,7 +25,7 @@
             android:background="@color/transparent">
 
             <ImageView
-                android:id="@+id/nav_icon"
+                android:id="@+id/map_nav"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
