--- a/app/src/main/res/menu/nav_options.xml
+++ b/app/src/main/res/menu/nav_options.xml
@@ -5,7 +5,7 @@
 
         <item
             android:id="@+id/tour"
-            android:icon="@drawable/ic_event_black_24dp"
+            android:icon="@drawable/travel_icon"
             android:title="Tour" />
 
         <item
